Removed clamp